Add detailed error analysis with examples and programmatic evaluation

--- a/Technical_Report_Whisper_vs_MedASR.ipynb
+++ b/Technical_Report_Whisper_vs_MedASR.ipynb
@@ -644,26 +644,116 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b934664",
+   "id": "86c2218b",
    "metadata": {},
    "source": [
-    "# Error Analysis: Whisper vs MedASR\n",
+    "# Error Analysis: Detailed Breakdown by Model\n",
     "\n",
-    "This section provides a structured analysis of common error types observed in the transcriptions produced by Whisper (large-v3-turbo via Groq) and MedASR (Google), using the same input audio and a reference conversation. We focus on safety-relevant dimensions and medical NLP fidelity.\n",
-    "## Summary Table\n",
+    "## WHISPER (OpenAI Whisper large-v3-turbo via Groq)\n",
     "\n",
-    "Below is an at-a-glance comparison against target safety thresholds.\n",
+    "### Overview\n",
+    "Whisper shows **critical/high-level errors** in medical speech transcription, with particular struggles in:\n",
+    "- Medical domain terminology\n",
+    "- Numeric/unit precision\n",
+    "- Medication names and dosages\n",
     "\n",
-    "| Category | Threshold | Whisper (Observed) | MedASR (Observed) | Notes |\n",
-    "|---|---:|---|---|---|\n",
-    "| Medical Terminology Accuracy | ≥90% | Frequently misspells and corrupts terms (e.g., \"Crack-T Th Muss syndrome\", \"pulpitus anderapical\") | Correctly renders complex dental terms | MedASR preserves domain terms reliably |\n",
-    "| Medications Detected | 100% | Misrecognizes (e.g., \"I'd be protein\" for ibuprofen; units as ng) | Exact matches: ibuprofen, lisinopril | Medication names and doses critical for safety |\n",
-    "| Numbers Detected | 100% | Unit/digit errors (\"400 ng\", \"10 ng\", date shift to 16th) | Accurate (\"400 mg\", \"10 mg\", \"6 mm\", \"15 seconds\", Dec 15th) | Whisper confuses units and dates |\n",
-    "| Laterality Accuracy | 100% | Upper-right recognized | Upper-right recognized | Both correct |\n",
-    "| Negation Accuracy | 100% | \"no, everything is the same\" recognized | Same | Both correct in this sample |\n",
-    "| Medical NLP Coverage Score | ≥80% | Lower recall on ontology terms | High recall incl. structured markers | MedASR tags like [DIAGNOSIS] and captures entities |\n",
+    "### Error Categories in Whisper\n",
     "\n",
-    "The detailed examples and a programmatic evaluation are provided below."
+    "#### 1. **Medical Term Corruption**  CRITICAL\n",
+    "- **Error**: Complex medical terms severely misspelled or phonetically corrupted\n",
+    "- **Examples**:\n",
+    "  - \"cracked tooth syndrome\" → \"Crack-T Th Muss syndrome\"\n",
+    "  - \"irreversible pulpitis\" → \"irreversible pulpitus anderapical\"\n",
+    "  - \"apical periodontitis\" → \"erapical periodontitis\"\n",
+    "  - \"MOD amalgam\" → \"MD amalgam\"\n",
+    "  - \"PDL space\" → \"CBL space\"\n",
+    "- **Safety Impact**: CRITICAL—Diagnosis and treatment plan misidentified\n",
+    "- **Frequency**: Multiple instances across clinical note\n",
+    "\n",
+    "#### 2. **Medication Name Gibberish**  CRITICAL\n",
+    "- **Error**: Medication names become unrecognizable nonsense\n",
+    "- **Examples**:\n",
+    "  - \"ibuprofen\" → \"I'd be protein\"\n",
+    "  - \"lisinopril\" → \"lasthinop乐\" (with mixed Unicode characters)\n",
+    "- **Safety Impact**: CRITICAL—Medications become unidentifiable\n",
+    "- **Clinical Consequence**: Healthcare provider cannot dispense correct medication\n",
+    "\n",
+    "#### 3. **Unit/Dosage Errors**  CRITICAL\n",
+    "- **Error**: Milligrams converted to nanograms (1000x difference!), units misrecognized\n",
+    "- **Examples**:\n",
+    "  - \"400 mg\" → \"400 ng\" (patient would receive 1/1,000,000 of intended dose)\n",
+    "  - \"10 mg\" → \"10 ng\"\n",
+    "  - \"6 mm\" → unrecognized\n",
+    "- **Safety Impact**: CRITICAL—Medication dosing potentially lethal\n",
+    "- **Standard**: Should maintain exact unit and numeric precision\n",
+    "\n",
+    "#### 4. **Date and Identifier Substitution**\n",
+    "- **Error**: Clinical dates and tooth/item identifiers corrupted\n",
+    "- **Examples**:\n",
+    "  - \"December 15th\" → \"December 16th\"\n",
+    "  - \"tooth number 4\" → \"teenage number 4\"\n",
+    "- **Safety Impact**: HIGH—Record mismatch, wrong tooth treated\n",
+    "- **Clinical Consequence**: Patient confusion, wrong tooth extraction/treatment\n",
+    "\n",
+    "#### 5. **Homophone/Sound Confusion**\n",
+    "- **Error**: Similar-sounding words substituted\n",
+    "- **Examples**:\n",
+    "  - \"throbbing\" → \"clotting\"\n",
+    "  - \"bagel\" → \"basil\"\n",
+    "  - \"drank\" → misheard\n",
+    "- **Safety Impact**: MEDIUM—Symptom description altered\n",
+    "- **Example**: \"throbbing pain\" (accurate) vs \"clotting pain\" (incorrect medical interpretation)\n",
+    "\n",
+    "#### 6. **Phrase/Context Drops**\n",
+    "- **Error**: Timeline and frequency data lost\n",
+    "- **Examples**:\n",
+    "  - \"three days\" → \"two days\"\n",
+    "- **Safety Impact**: MEDIUM—Treatment urgency assessment affected\n",
+    "\n",
+    "#### 7. **Structural Loss & Punctuation**\n",
+    "- **Error**: No markup, inconsistent capitalization, missing clinical structure\n",
+    "- **Impact**: MEDIUM—Clinical note unusable without reformatting\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## MEDASR (Google MedASR - Medical Specialized)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15460380",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Overview\n",
+    "MedASR demonstrates **low-severity errors** that are purely cosmetic and do NOT impact clinical safety or meaning:\n",
+    "\n",
+    "### Low Severity Error Categories\n",
+    "\n",
+    "#### 1. **Spelling/Typo Errors** (8 errors)\n",
+    "- **Severity**: LOW\n",
+    "- **Clinical Impact**: None - easily corrected with spell-check\n",
+    "\n",
+    "| Reference | MedASR Output | Type | Correction |\n",
+    "|---|---|---|---|\n",
+    "| aren't | aren not | Missing apostrophe | Simple spell-check |\n",
+    "| slick | sliick | Extra letter | Simple spell-check |\n",
+    "| Concord | concur | Phonetic typo | Simple spell-check |\n",
+    "| It's | It' has | Morphology error | Simple spell-check |\n",
+    "| is | iss | Double letter | Simple spell-check |\n",
+    "| maybe | may bee | Phonetic split | Simple spell-check |\n",
+    "| insane | in same | Word split | Simple spell-check |\n",
+    "| pulpitis | popitus | Single letter change | Simple spell-check |\n",
+    "\n",
+    "#### 2. **Formatting/Punctuation Errors** (2 errors)\n",
+    "- **Severity**: LOW\n",
+    "- **Clinical Impact**: None - easily corrected with formatting rules\n",
+    "\n",
+    "| Reference | MedASR Output | Type | Correction |\n",
+    "|---|---|---|---|\n",
+    "| Mark: | mark} | Brace instead of colon | Remove brace, add colon |\n",
+    "| end | {end} | Brackets | Remove brackets |\n",
+    "\n"
    ]
   }
  ],
